<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20sp"
    android:background="@drawable/border_linear_layout"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvTitulo1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingTop="10sp"
        android:layout_marginBottom="2sp"
        android:text="@string/tvTitulo1"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/tvVersionAndroidLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5sp"
        android:text="@string/tvVersionAndroidLB" />

    <TextView
        android:id="@+id/tvVersionAndroid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5sp"
        android:text="@string/tvVersionAndroid" />

    <TextView
        android:id="@+id/tvLight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5sp"
        android:text="@string/tvLight" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <Button
            android:id="@+id/btnOff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/btnOff" />

        <Button
            android:id="@+id/btnOn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/btnOn" />
    </TableRow>

    <TextView
        android:id="@+id/tvLevelBaterryLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5sp"
        android:text="@string/tvLevelBaterryLB" />

    <TextView
        android:id="@+id/tvLevelBaterry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5sp"
        android:text="@string/tvLevelBaterry" />

    <ProgressBar
        android:id="@+id/pbLevelBaterry"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pbLevelBaterry" />

    <TextView
        android:id="@+id/tvConectionLB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5sp"
        android:text="@string/tvConectionLB" />

    <TextView
        android:id="@+id/tvConexion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5sp"
        android:text="@string/tvConexion" />

    <TextView
        android:id="@+id/tvArchivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:padding="5sp"
        android:text="@string/tvArchivo" />

    <EditText
        android:id="@+id/etNombreArchivo"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:ems="10"
        android:hint="@string/etNombreArchivo"
        android:inputType="text"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btnCheckPermission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3sp"
        android:textSize="16sp"
        android:text="@string/btnCheckPermission" />


    <Button
        android:id="@+id/btnGuardarArchivo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3sp"
        android:textSize="16sp"
        android:text="@string/btnArchivo" />

    <TextView
        android:id="@+id/tvResponse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginTop="5sp"
        android:textColor="#9A24D5"
        android:padding="5sp"
        android:text="@string/tvResponse" />

</LinearLayout>